--- a/PedraPapelTesoura.ipynb
+++ b/PedraPapelTesoura.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVI0ZHKOHOP3b6dlbA06Da",
+      "authorship_tag": "ABX9TyN/RtuNy99uKxvX1o4Qa1cK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "2C_Zp_DuzwPJ"
       },
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "dOFPdm3D02Xr"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
       "source": [
         "def vencedor(jogador, IA):\n",
         "\n",
-        "  if jogador == computador:\n",
+        "  if jogador == IA:\n",
         "    return \"Empatou!\"\n",
         "\n",
         "  elif jogador == \"Pedra\" and IA == \"Tesoura\":\n",
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "oUUb_Mhr14cd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
